--- a/index.html
+++ b/index.html
@@ -16,21 +16,10 @@
 
 <body>
   <header>
-    <img src="./logo.png" alt="logo digimon" id="logo">
+    <img src="./assets/logo.png" alt="logo digimon" id="logo">
+    <h1>Digimoteca</h1>
   </header>
   <main>
-    <div class="find">
-      <h2>Descubra um</h2>
-      <h2>Digimon</h2>
-      <button type="button">PRESS</button>
-    </div>
-    <div>
-      <img src="./card.webp" alt="card verso" id="cardVerso">
-    </div>
-    <div>
-      <h3>Nome:</h3>
-      <h3>Nível:</h3>
-    </div>
   </main>
   <footer>
     <div>
@@ -43,5 +32,6 @@
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/0121593c44.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./script.js"></script>
 </body>
