--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@300;400;500&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>Digimon</title>
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <title>Digimoteca</title>
 </head>
 
 <body>
